<resources>
    <string name="app_name">Guitar Tuner App</string>

    <!--
        Activity Strings
    -->
    <string name="FrontPage">Tuner Page</string>
    <string name="RecordPage">Record</string>
    <string name="AddRecordPage">Add Recording</string>
    <string name="MetronomePage">Metron.</string>
    <string name="LoginPage">Login</string>
    <string name="LyricsPage">Lyrics</string>
    <string name="AddLyricsPage">Add Lyrics</string>

    <!--
        Placeholder Strings
    -->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="logo">Logo</string>

    <!--
        Note strings - EADGBe
    -->
    <string name="EString">E</string>
    <string name="AString">A</string>
    <string name="DString">D</string>
    <string name="GString">G</string>
    <string name="BString">B</string>
    <string name="eString">e</string>

    <string name="title_activity_front_page_nav">Guitar Tuner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="welcome_user_ready_to_rock">Welcome User, Ready to Rock?</string>

    <string name="switch_name">Switch</string>
    <string name="metronomeicon">MetronomeIcon</string>
    <string name="switch_onOff">on/off</string>
    <string name="add">+</string>
    <string name="song_title">Song Title</string>
    <string name="record">record</string>
    <string name="back">X</string>
    <string name="tuner">Tuner</string>
    <string name="song_name">Song Title</string>
    <string name="enter_lyrics_here">Enter Lyrics Here</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="a_fret">a fret</string>

</resources>
