<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@mipmap/tunericon" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:layout_marginTop="150dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textEditSuggestionItemLayout="@string/Password" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/LoginPage"
        android:onClick="goToFrontpage"
        android:layout_marginTop="200dp"/>

    <Button
        android:id="@+id/registerBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:onClick="goToRegisterPage"
        android:text="Register" />


</RelativeLayout>