<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_E"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="200dp"
                android:onClick="playE"
                android:textSize="50sp"
                android:background="@drawable/e"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fret"
                android:contentDescription="@string/a_fret" />

            <Button
                android:id="@+id/button_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="200dp"
                android:textSize="50sp"
                android:background="@drawable/a" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fret"
                android:contentDescription="@string/a_fret" />

            <Button
                android:id="@+id/button_D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="200dp"
                android:textSize="50sp"
                android:background="@drawable/d"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fret"
                android:contentDescription="@string/a_fret" />

            <Button
                android:id="@+id/button_G"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="200dp"
                android:textSize="50sp"
                android:background="@drawable/g"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fret"
                android:contentDescription="@string/a_fret" />

            <Button
                android:id="@+id/button_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="200dp"
                android:textSize="50sp"
                android:background="@drawable/b"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fret"
                android:contentDescription="@string/a_fret" />

            <Button
                android:id="@+id/button_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="200dp"
                android:textSize="50sp"
                android:background="@drawable/he"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark">

        <Button
            android:id="@+id/button_tuner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuner"
            android:onClick="goToFrontpage"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/button_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/record"
            android:onClick="goToRecordpage"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/button_lyrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LyricsPage"
            android:onClick="goToLyricspage"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/button_metronome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MetronomePage"
            android:onClick="goToMetronomepage"
            android:textSize="12sp"/>
    </LinearLayout>

</RelativeLayout>